@@ -80,7 +80,9 @@ import org.labkey.api.webdav.WebdavResource;
 import org.labkey.api.webdav.WebdavService;
 import org.labkey.experiment.api.*;
 import org.labkey.experiment.api.data.ChildOfCompareType;
+import org.labkey.experiment.api.data.ChildOfMethod;
 import org.labkey.experiment.api.data.ParentOfCompareType;
+import org.labkey.experiment.api.data.ParentOfMethod;
 import org.labkey.experiment.api.property.DomainPropertyImpl;
 import org.labkey.experiment.api.property.LengthValidator;
 import org.labkey.experiment.api.property.LookupValidator;
@@ -128,9 +130,9 @@ public class ExperimentModule extends SpringModule implements SearchService.Docu
     }
 
     @Override
-    public double getVersion()
+    public Double getSchemaVersion()
     {
-        return 19.32;
+        return 20.001;
     }
 
     @Nullable
@@ -160,6 +162,8 @@ public class ExperimentModule extends SpringModule implements SearchService.Docu
 
         QueryService.get().addCompareType(new ChildOfCompareType());
         QueryService.get().addCompareType(new ParentOfCompareType());
+        QueryService.get().registerMethod(ChildOfMethod.NAME, new ChildOfMethod(), null, 2, 2);
+        QueryService.get().registerMethod(ParentOfMethod.NAME, new ParentOfMethod(), null, 2, 2);
 
         PropertyService.get().registerValidatorKind(new RegExValidator());
         PropertyService.get().registerValidatorKind(new RangeValidator());
@@ -481,40 +485,41 @@ public class ExperimentModule extends SpringModule implements SearchService.Docu
     @NotNull
     public Set<Class> getIntegrationTests()
     {
-        return new HashSet<>(Arrays.asList(
-                OntologyManager.TestCase.class,
-                DomainPropertyImpl.TestCase.class,
-                ExpDataClassDataTestCase.class,
-                ExpSampleSetTestCase.class,
-                UniqueValueCounterTestCase.class,
-                ExperimentServiceImpl.TestCase.class,
-                ExpDataTableImpl.TestCase.class,
-                ExperimentStressTest.class,
-                LineageTest.class
-                , LineagePerfTest.class));
+        return Set.of(
+            DomainPropertyImpl.TestCase.class,
+            ExpDataClassDataTestCase.class,
+            ExpDataTableImpl.TestCase.class,
+            ExpSampleSetTestCase.class,
+            ExperimentServiceImpl.TestCase.class,
+            ExperimentStressTest.class,
+            LineagePerfTest.class,
+            LineageTest.class,
+            OntologyManager.TestCase.class,
+            UniqueValueCounterTestCase.class
+        );
     }
 
     @NotNull
     @Override
     public Set<Class> getUnitTests()
     {
-        return new HashSet<>(Arrays.asList(
-            Lsid.TestCase.class,
-            LSIDRelativizer.TestCase.class,
-            LsidUtils.TestCase.class,
+        return Set.of(
             GraphAlgorithms.TestCase.class,
+            LSIDRelativizer.TestCase.class,
+            Lsid.TestCase.class,
+            LsidUtils.TestCase.class,
             PropertyController.TestCase.class
-        ));
+        );
     }
 
     @Override
     @NotNull
     public Set<String> getSchemaNames()
     {
-        return PageFlowUtil.set(
-                ExpSchema.SCHEMA_NAME,
-                DataClassDomainKind.PROVISIONED_SCHEMA_NAME,
-                SampleSetDomainKind.PROVISIONED_SCHEMA_NAME
+        return Set.of(
+            ExpSchema.SCHEMA_NAME,
+            DataClassDomainKind.PROVISIONED_SCHEMA_NAME,
+            SampleSetDomainKind.PROVISIONED_SCHEMA_NAME
         );
     }
 
